# Job-Application-Pipeline

./: .gitignore  README (1).md  README.md  pyproject.toml
config/: models.json  models.yaml
config/profile/: README.md  master_profile.example.yaml
config/prompts/: bulk_job_extraction.md  discovery_fetch_sort.md  email_classify.md  form_fill.md  resume_quality_audit.md  tailor_resume.md  truth_guard.md
scripts/: install_daily_task.ps1  run_daily_report.ps1  smoke_test.ps1  uninstall_daily_task.ps1
src/job_pipeline/: __init__.py  __main__.py  cli.py  smoke.py  telegram.py  text_utils.py
src/job_pipeline/cleanup/: __init__.py  retention.py
src/job_pipeline/db/: __init__.py  connection.py  repository.py  schema.sql
src/job_pipeline/llm/: __init__.py  model_policy.py  openrouter.py
src/job_pipeline/matching/: __init__.py  apply_gate.py  family_linker.py  policy.py  reapply.py  similarity.py
src/job_pipeline/profile/: __init__.py  loader.py
src/job_pipeline/render/: __init__.py  resume.py
src/job_pipeline/reports/: __init__.py  daily.py
