[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-application-pipeline"
version = "0.1.0"
description = "Local-first job application pipeline with SQLite provenance and artifact tracking"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2",
]

[project.scripts]
job-pipeline = "job_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"job_pipeline.db" = ["schema.sql"]
